--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -25,7 +25,7 @@ msgstr "دستاوردها"
 
 #: src/pages/dashboard-page/DashboardPage.tsx:51
 #: src/pages/manager-review-page/ManagerReviewPage.tsx:49
-#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:65
+#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:64
 #: src/pages/peer-review-page/PeerReviewPage.tsx:46
 #: src/pages/result-page/ResultPage.tsx:24
 #: src/pages/self-review-page/SelfReviewPage.tsx:24
@@ -61,12 +61,21 @@ msgstr "خطایی رخ داده. دوباره تلاش کنید."
 msgid "Are you sure you want to delete this project review?"
 msgstr "آیا از حذف  این پروژه مطمین هستید؟"
 
+#: src/pages/dashboard-page/DashboardPage.tsx:35
+#: src/pages/manager-review-page/ManagerReviewPage.tsx:47
+#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:54
+#: src/pages/peer-review-page/PeerReviewPage.tsx:44
+#: src/pages/result-page/ResultPage.tsx:22
+#: src/pages/self-review-page/SelfReviewPage.tsx:22
+msgid "Behavioral Competencies"
+msgstr "شایستگی‌های رفتاری"
+
 #: src/shared/sticky-bottom-paper/StickyBottomPaper.stories.tsx:11
 msgid "Cancel"
 msgstr "لغو"
 
 #: src/pages/manager-review-page/ManagerReviewPage.tsx:40
-#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:45
+#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:44
 #: src/pages/peer-review-page/PeerReviewPage.tsx:36
 #: src/pages/self-review-page/SelfReviewPage.tsx:31
 #: src/stories/decorators/promptDecorator.tsx:5
@@ -76,6 +85,10 @@ msgstr "یعنی بدون ذخیره تغییرات می‌خوای بری؟؟"
 #: src/pages/projects-page/AddProjectForm.tsx:28
 msgid "Choose projects you have been working on in the past year."
 msgstr "پروژه‌هایی که طی یک سال گذشته درگیرشون بودید رو انتخاب کنید."
+
+#: src/pages/projects-page/ProjectForm.tsx:76
+msgid "Coordinate reviewers with your manager (maximum 6 reviewers)"
+msgstr "مرورکنندگان رو حتما با هماهنگی مدیر مستقیم خودتون انتخاب کنید (حداکثر ۶ نفر)"
 
 #: src/shared/full-page-error/FullPageError.stories.tsx:9
 msgid "Criteria"
@@ -97,7 +110,7 @@ msgstr "حذف"
 
 #: src/pages/dashboard-page/DashboardPage.tsx:43
 #: src/pages/manager-review-page/ManagerReviewPage.tsx:48
-#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:60
+#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:59
 #: src/pages/peer-review-page/PeerReviewPage.tsx:45
 #: src/pages/result-page/ResultPage.tsx:23
 #: src/pages/self-review-page/SelfReviewPage.tsx:23
@@ -160,10 +173,6 @@ msgstr "اجرا"
 #: src/pages/guide-page/GuidePage.tsx:10
 msgid "FAQ"
 msgstr "‌سؤالات متداول"
-
-#: src/pages/projects-page/ProjectForm.tsx:70
-msgid "For instance, your personal key-results may be your accomplishments."
-msgstr "مثلاً ممکنه Key Result های شخصیتون، دستاوردهاتون باشه"
 
 #: src/pages/dashboard-page/AchievementsNoProjects.tsx:8
 msgid "Go to Achievements page and add projects you have participated in"
@@ -274,7 +283,7 @@ msgid "Other people comments about {name} performance compared to initial expect
 msgstr "نظرات دیگران در مورد سطح عملکرد {name} در این پروژه"
 
 #: src/pages/manager-review-page/ManagerReviewPage.tsx:50
-#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:70
+#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:69
 msgid "Overall Evaluation"
 msgstr "ارزیابی کلی"
 
@@ -285,19 +294,6 @@ msgstr "گذرواژه"
 #: src/containers/main/getMenuItems.ts:29
 msgid "Peer Review"
 msgstr "ارزیابی همکار"
-
-#: src/pages/projects-page/ProjectForm.tsx:76
-msgid "People who will comment on your accomplishments and write your performance competencies and dominant characteristics from their own point of view."
-msgstr "کسانی هستن که روی دستاوردهاتون کامنت میدن و شایستگی‌های عملکردی  و ویژگی‌های بارز شما رو از نگاه خودشون می‌‌نویسن. (حداکثر ۶ نفر)"
-
-#: src/pages/dashboard-page/DashboardPage.tsx:35
-#: src/pages/manager-review-page/ManagerReviewPage.tsx:47
-#: src/pages/manager-review-page/ManagerReviewPrintPage.tsx:55
-#: src/pages/peer-review-page/PeerReviewPage.tsx:44
-#: src/pages/result-page/ResultPage.tsx:22
-#: src/pages/self-review-page/SelfReviewPage.tsx:22
-msgid "Performance Competencies"
-msgstr "شایستگی‌های عملکردی"
 
 #: src/App.tsx:24
 #: src/containers/main/MainContainer.tsx:23
@@ -444,24 +440,24 @@ msgstr "ممنون، بعدا می‌گیرم جایزمو"
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:54
 #: src/shared/dominant-characteristics-output/DominantCharacteristics.tsx:21
 msgid "The most important characteristics or behaviors I should improve in myself"
-msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید بهبودشون بدم"
+msgstr "مهم‌ترین ویژگی‌ها یا رفتارهایی که باید بهبودشون بدم"
 
 #: src/pages/manager-review-page/dominant-characteristics/ManagerReviewDominantCharacteristics.tsx:28
 #: src/pages/result-page/strengths-weaknesses-result-page/StrengthsWeaknessesResult.tsx:33
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:55
 msgid "The most important characteristics or behaviors he/she should improve"
-msgstr "مهمترین ویژگی‌ها یا رفتارهایی که باید بهبودشون بده"
+msgstr "مهم‌ترین ویژگی‌ها یا رفتارهایی که باید بهبودشون بده"
 
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:45
 #: src/shared/dominant-characteristics-output/DominantCharacteristics.tsx:18
 msgid "The most important characteristics or effective behaviors that I should maintain"
-msgstr "مهمترین ویژگی‌ها یا رفتارهای مؤثری که باید ادامه‌شون بدم"
+msgstr "مهم‌ترین ویژگی‌ها یا رفتارهای مؤثری که باید ادامه‌شون بدم"
 
 #: src/pages/manager-review-page/dominant-characteristics/ManagerReviewDominantCharacteristics.tsx:27
 #: src/pages/result-page/strengths-weaknesses-result-page/StrengthsWeaknessesResult.tsx:32
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:46
 msgid "The most important characteristics or effective behaviors that he/she should maintain"
-msgstr "مهمترین ویژگی‌ها یا رفتارهای مؤثری که باید ادامه‌شون بده"
+msgstr "مهم‌ترین ویژگی‌ها یا رفتارهای مؤثری که باید ادامه‌شون بده"
 
 #: src/pages/criteria-page/CriteriaForm.tsx:65
 #: src/pages/manager-review-page/performance-competencies/ManagerReviewPerformanceCompetencies.tsx:105
@@ -521,6 +517,10 @@ msgstr "چی رو ادامه بدم"
 msgid "What to improve"
 msgstr "چی رو بهبود بدم"
 
+#: src/pages/projects-page/ProjectForm.tsx:70
+msgid "Work results and achievemnts reflecting your contributions; For instance, your key-results"
+msgstr "خروجی‌ها و دستاوردهایی که نشان‌دهندهٔ تاثیر شما در این پروژه بوده؛ به عنوان مثال نتایج کلیدی شما در دورهٔ اخیر"
+
 #: src/shared/confirm-button/ConfirmButton.tsx:8
 msgid "Yes"
 msgstr "بله"
@@ -534,8 +534,8 @@ msgid "You have evaluated all {total} achievements. You can change them when you
 msgstr "هر {total} پروژه ارزیابی شد. هر زمان که خواستی می‌تونی اونارو تغییر بدی"
 
 #: src/pages/manager-review-page/ManagerReviewProgress.tsx:34
-msgid "You have evaluated all {total} performance competencies. You can change them when you want to."
-msgstr "هر {total} مورد شایستگی عملکردی ارزیابی شد. هر زمان که خواستی می‌تونی اونارو تغییر بدی"
+msgid "You have evaluated all {total} behavioral competencies. You can change them when you want to."
+msgstr "هر {total} مورد شایستگی رفتاری ارزیابی شد. هر زمان که خواستی می‌تونی اونارو تغییر بدی"
 
 #: src/pages/dashboard-page/AchievementsNoProjects.tsx:6
 msgid "You haven't added any project."
@@ -551,8 +551,8 @@ msgid "You haven't evaluated any achievements yet"
 msgstr "هنوز هیچ پروژه‌ای را ارزیابی نکردی"
 
 #: src/pages/manager-review-page/ManagerReviewProgress.tsx:32
-msgid "You haven't evaluated any performance competencies yet"
-msgstr "هنوز هیچ شایستگی عملکری را ارزیابی نکردی"
+msgid "You haven't evaluated any behavioral competencies yet"
+msgstr "هنوز هیچ شایستگی رفتاری را ارزیابی نکردی"
 
 #: src/pages/peer-review-board-page/PeerReviewBoardPage.tsx:80
 msgid "You haven't started evaluating yet!"
@@ -590,8 +590,8 @@ msgid "{evaluatedItems} of {total} achievements are evaluated"
 msgstr "{evaluatedItems} مورد از {total} پروژه ارزیابی شد"
 
 #: src/pages/manager-review-page/ManagerReviewProgress.tsx:33
-msgid "{evaluatedItems} of {total} performance competencies are evaluated"
-msgstr "{evaluatedItems} مورد از {total} شایستگی عملکردی ارزیابی شد"
+msgid "{evaluatedItems} of {total} behavioral competencies are evaluated"
+msgstr "{evaluatedItems} مورد از {total} شایستگی رفتاری ارزیابی شد"
 
 #: src/pages/manager-review-page/achievements/ManagerReviewAchievementsRatingGroup.tsx:50
 #: src/pages/manager-review-page/performance-competencies/ManagerReviewPerformanceCompetenciesRatingGroup.tsx:70
