--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -59,8 +59,8 @@ msgid "An error occurred. Try again!"
 msgstr "An error occurred. Try again!"
 
 #: src/pages/projects-page/ProjectForm.tsx:83
-msgid "Are you sure you want to delete this project review?"
-msgstr "Are you sure you want to delete this project review?"
+msgid "Are you sure you want to delete {projectName} review?"
+msgstr "Are you sure you want to delete {projectName} review?"
 
 #: src/containers/main/getMenuItems.ts:22
 #: src/pages/dashboard-page/DashboardPage.tsx:35
@@ -348,7 +348,7 @@ msgstr "Role Expertise and Self Development"
 #: src/pages/manager-review-page/overall-evaluation/ManagerReviewOverallEvaluation.tsx:73
 #: src/pages/manager-review-page/performance-competencies/ManagerReviewPerformanceCompetencies.tsx:120
 #: src/pages/peer-review-page/projectsTab/projects-form/PeerReviewProjectsForm.tsx:47
-#: src/pages/projects-page/ProjectForm.tsx:85
+#: src/pages/projects-page/ProjectForm.tsx:87
 #: src/pages/strengths-weaknesses-page/StrengthsWeaknessesForm.tsx:65
 msgid "Save"
 msgstr "Save"
