fix: update self-review content

--- a/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
@@ -1,4 +1,4 @@
-همهٔ ما شایستگی‌ها، نگرش‌ها و توانایی‌هایی داریم که می‌دونیم از نقاط قوت رفتاریمون هستند و در نظر داریم که بهشون ادامه بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اون‌ها متمرکز شیم.
+همهٔ ما شایستگی‌ها، نگرش‌ها و توانایی‌هایی داریم که می‌دونیم از نقاط قوت رفتاریمون هستند و در نظر داریم که ادامه‌شون بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اون‌ها متمرکز شیم.
 
 توی این بخش حداکثر ۳ تا از مهم‌ترین ویژگی‌ها یا رفتارها رو برای هر دو بخش ذکر کنید.
 
