--- a/src/shared/criteria-help-text/help-texts/self-review/ExecutionContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/ExecutionContent.mdx
@@ -1,1 +1,1 @@
-خروجی‌هایی که ارائه می‌دین، چقدر با کیفیت و با راهنمایی کمینه از طرف همکاران و مدیر شما هستن؟
+در ارائه خروجی با کیفیت در عین به نتیجه رسوندن کارها چطور هستید؟
