--- a/src/shared/criteria-help-text/help-texts/self-review/OrganizationCultureAdoptionContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/self-review/OrganizationCultureAdoptionContent.mdx
@@ -1,1 +1,1 @@
-ارزش‌های سحاب چقدر در شما درونی شده و چقدر در رفتارتون دیده میشه؟ (مثل رفتار سهام‌دارانه، صداقت و صراحت و احترام، ارتباطات بی‌واسطه، همکاری و کار تیمی، انعطاف‌پذیری نسبت به تغییر)
+چقدر با فرهنگ سازمان همراه هستید؟ (مثل اشتیاق به تغییر، صداقت، صراحت و احترام، ارتباطات بی‌واسطه، نگاه‌بلند مدت، یادگرفتن از شکست‌ها، تعهد به رفتار حرفه‌ای)
