--- a/src/pages/criteria-page/help-texts/self-review/DescriptionContent.mdx
+++ b/src/pages/criteria-page/help-texts/self-review/DescriptionContent.mdx
@@ -1,3 +1,3 @@
-خودتون رو توی ۶ شایستگی زیر و در ۴ سطح ارزیابی کنید و برای هر شایستگی، **یکی دو مثال از رفتار خودتون به عنوان شاهدی** بر ارزیابی‌تون ارائه بدید. منظور از «انتظاری که از من میره»، **برداشت شما از انتظاریه که دیگران (تیم و سازمان) از شما دارند.**
+عملکردتون رو توی ۶ شایستگی زیر و در ۴ سطح ارزیابی کنید و برای هر شایستگی، **یکی دو مثال از رفتار خودتون به عنوان شاهدی** بر ارزیابی‌تون ارائه بدید. منظور از «انتظاری که از من میره»، **برداشت شما از انتظاریه که دیگران (تیم و سازمان) از شما دارند.**
 
 اطلاعاتی که در این بخش وارد می‌کنید _فقط_ توسط مدیر مستقیم شما قابل مشاهده خواهد بود.
