--- a/src/pages/peer-review-page/projectsTab/Guide.mdx
+++ b/src/pages/peer-review-page/projectsTab/Guide.mdx
@@ -1,3 +1,5 @@
 import { Username } from 'src/pages/criteria-page/Username';
+import { ShortUsername } from 'src/pages/criteria-page/ShortUsername';
 
-حتماً اول ارزیابی **<Username/>** از خودش رو بخون و اگه ارزیابی دیگه‌ای داری، دلیل این ارزیابی رو در قالب مشاهده‌هایی که داشتی برای دوستت بنویس.
+برای هر پروژه، ابتدا دستاوردهایی که **<Username/>** نوشته رو بخون و بعد، ارزیابی خودت به همراه مشاهده‌ها و بازخوردهات رو براش بنویس.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername />** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
