fix(peer-review): update behavioral competencies content

--- a/src/shared/criteria-help-text/help-texts/peer-review/OrganizationCultureAdoptionContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/peer-review/OrganizationCultureAdoptionContent.mdx
@@ -1,1 +1,1 @@
-به لحاظ فرهنگ سازمانی چطوره؟ (مثلاً: همکاری و کار تیمی، مسئولیت‌پذیری و تعهد به کار و خروجی آن، صداقت و صراحت و احترام، انتقادپذیری، انعطاف‌پذیری نسب به تغییر، دغدغه‌مند و مؤثر بودن در پیشرفت سحابی‌ها و سحاب)
+چقدر با فرهنگ سازمان همراه هست؟ (مثل اشتیاق به تغییر، صداقت، صراحت و احترام، ارتباطات بی‌واسطه، نگاه‌بلند مدت، یادگرفتن از شکست‌ها، تعهد به رفتار حرفه‌ای)
