--- a/src/shared/criteria-help-text/help-texts/peer-review/ThoughtLeadershipContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/peer-review/ThoughtLeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر در حوزه‌‌ای که در اون تخصص داره، بهش رجوع می‌کنن؟ چقدر دیگران ازش کمک می‌گیرن؟ چقدر در مورد ابزارها یا زبان‌هایی که تسلط داره، ازش سوال می‌پرسن؟
+دیگران چقدر در حوزهٔ مربوط بهش و برای به دست‌آوردن دانش به‌روز، به عنوان یک متخصص بهش رجوع می‌کنند؟
