--- a/src/pages/criteria-page/help-texts/peer-review/DescriptionContent.mdx
+++ b/src/pages/criteria-page/help-texts/peer-review/DescriptionContent.mdx
@@ -1,3 +1,6 @@
 import { Username } from 'src/pages/criteria-page/Username';
+import { ShortUsername } from 'src/pages/criteria-page/ShortUsername';
 
- **<Username/>** رو در این  ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
+**<Username/>** رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
+
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای <ShortUsername/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
