--- a/src/shared/criteria-help-text/help-texts/peer-review/LeadershipContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/peer-review/LeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر اهل به عهده گرفتن مسئولیت کارهای مهم و هدایت و راهبری اون‌ها در تیم و پذیرفتن نتایجشونه؟ (مطلوب یا نا مطلوب)
+چقدر نسبت به مسائل محصول و تیم و سازمان حساسیت نشون میده، به صورت فعالانه مسئولیت راهبری حل اون‌ها رو برعهده می‌‌گیره و در نهایت نتایجش رو می‌پذیره؟
