--- a/src/shared/criteria-help-text/help-texts/peer-review/ProblemSolvingContent.mdx
+++ b/src/shared/criteria-help-text/help-texts/peer-review/ProblemSolvingContent.mdx
@@ -1,1 +1,1 @@
-در مواجهه با مسائل جدید چطور عمل میکنه؟ (مثلاً: تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین و ارائه راه‌حل قابل اجرا و سپس تصمیم‌گیری)
+مهارت حل مسئله‌ش رو چگونه ارزیابی می‌کنی؟ (مثل تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین، ارائه راه‌حل قابل اجرا و تصمیم‌گیری)
