fix(peer-review): update dominant characteristics content

--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -1,3 +1,6 @@
 import { Username } from 'src/pages/criteria-page/Username';
+import { ShortUsername } from 'src/pages/criteria-page/ShortUsername';
 
-بنظرت **<Username/>** کدوم ویژگی‌ها یا رفتارهاش رو باید ادامه بده و چه رفتارهایی رو باید اصلاح کنه؟
+به نظرت **<Username/>** کدوم ویژگی‌ها و رفتارهاش رو باید ادامه بده و در آیندهٔ نزدیک روی بهبود کدوم‌ها تمرکز کنه؟ برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
+
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername/>** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
