fix: add user label to user context

--- a/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
+++ b/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
@@ -1,6 +1,5 @@
-import { Username } from 'src/pages/behavioral-competencies-page/Username';
-import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsername';
+import { UserLabel } from 'src/shared/user-label/UserLabel';
 
-**<Username/>** رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
+**<UserLabel/>** رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای <ShortUsername/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای <UserLabel short/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
