--- a/src/pages/manager-review-page/behavioral-competencies/ManagerReviewBehavioralCompetenciesDescription.mdx
+++ b/src/pages/manager-review-page/behavioral-competencies/ManagerReviewBehavioralCompetenciesDescription.mdx
@@ -1,7 +1,7 @@
 import HelpIcon from '@material-ui/icons/Help';
-import { Username } from 'src/pages/manager-review-page/Username';
+import { UserLabel } from 'src/shared/user-label/UserLabel';
 
-پاسخ‌ها به تفکیک هر بخش و بر اساس نوع ارزیابی مشخص شدن و پاسخ <Username /> هم در اونها متمایز شده.
+پاسخ‌ها به تفکیک هر بخش و بر اساس نوع ارزیابی مشخص شدن و پاسخ <UserLabel /> هم در اونها متمایز شده.
 ضمنا در هر قسمت می‌تونی با رفتنت بر روی <HelpIcon fontSize="small" color="action" />
 ، سوالی که پرسیده شده بود رو هم مشاهده کنی.
 
