--- a/src/pages/peer-review-page/projectsTab/Guide.mdx
+++ b/src/pages/peer-review-page/projectsTab/Guide.mdx
@@ -1,5 +1,4 @@
-import { Username } from 'src/pages/behavioral-competencies-page/Username';
-import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsername';
+import { UserLabel } from 'src/shared/user-label/UserLabel';
 
-برای هر پروژه، ابتدا دستاوردهایی که **<Username/>** نوشته رو بخون و بعد، ارزیابی خودت به همراه مشاهده‌ها و بازخوردهات رو براش بنویس.
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername />** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+برای هر پروژه، ابتدا دستاوردهایی که **<UserLabel/>** نوشته رو بخون و بعد، ارزیابی خودت به همراه مشاهده‌ها و بازخوردهات رو براش بنویس.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<UserLabel short />** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
