--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -1,6 +1,5 @@
-import { Username } from 'src/pages/behavioral-competencies-page/Username';
-import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsername';
+import { UserLabel } from 'src/shared/user-label/UserLabel';
 
-به نظرت **<Username/>** کدوم ویژگی‌ها و رفتارهاش رو باید ادامه بده و در آیندهٔ نزدیک روی بهبود کدوم‌ها تمرکز کنه؟ برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
+به نظرت **<UserLabel/>** کدوم ویژگی‌ها و رفتارهاش رو باید ادامه بده و در آیندهٔ نزدیک روی بهبود کدوم‌ها تمرکز کنه؟ برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername/>** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<UserLabel short/>** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
