--- a/src/shared/gift-dialog/Content.mdx
+++ b/src/shared/gift-dialog/Content.mdx
@@ -1,8 +1,12 @@
-import { UserLabel } from 'src/shared/gift-dialog/UserLabel.tsx';
+import { UserLabel } from 'src/shared/user-label/UserLabel';
+import { Typography } from '@material-ui/core';
 
-<UserLabel />  
+<Typography style={{ textAlign: 'center' }} gutterBottom>
+  <UserLabel /> عزیز
+</Typography>
 
-خسته نباشی. شما بصورت کامل ارزیابی‌ها رو انجام دادی. تا قبل از پایان مهلت ارزیابی‌ها، هر وقت تمایل داشتی می‌تونی به ارزیابی هر کدوم از همکارانت که خواستی مراجعه و اون رو ویرایش کنی.  
-برای رفع خستگی یه جایزه در نظر گرفتیم که تقدیمت می‌کنیم.  
+خسته نباشی. شما بصورت کامل ارزیابی‌ها رو انجام دادی. تا قبل از پایان مهلت ارزیابی‌ها، هر وقت تمایل داشتی می‌تونی به
+ارزیابی هر کدوم از همکارانت که خواستی مراجعه و اون رو ویرایش کنی. برای رفع خستگی یه جایزه در نظر گرفتیم که تقدیمت
+می‌کنیم.
 
 امیدواریم خوشت بیاد.
