--- a/src/pages/projects-page/DescriptionContent.mdx
+++ b/src/pages/projects-page/DescriptionContent.mdx
@@ -1,3 +1,1 @@
-در این بخش تمرکز روی **خروجی‌ها**ست و باید خروجی‌ها و دستاوردهایی که در پیش‌برد پروژه‌های مختلف داشتید رو ذکر کنید. به عنوان مثال این خروجی‌ها می‌تونن نتایج کلیدی شما در دورهٔ اخیر باشن.
-
-مرورکنندگانی که برای هر پروژه مشخص می‌کنید، ارزیابی شما رو برای اون پروژه در فاز بعدی می‌خونن و روش نظر می‌دن. همچنین این افراد «شایستگی‌های رفتاری» و «ویژگی‌های بارز» شما رو از نگاه خودشون (و بدون خوندن نوشته‌های شما) ارزیابی می‌کنند. مرورکنندگان هر پروژه رو حتما با هماهنگی مدیر مستقیم خودتون انتخاب کنید.
+در این بخش تمرکز روی **فعالیت‌ها**ست و باید همه کارهایی که انجام دادی رو به حداکثر ۵ فعالیت کلی بشکنی. در انجام این کار می‌تونی از مدیر مستقیمت کمک بگیری. در نهایت می‌شه فعالیتی رو با عنوان «کارهای متفرقه» تعریف کنی و کارهایی رو که در هیچ فعالیتی نمی‌گنجن اونجا توضیح بدی.
