Add ** before untranslated texts

--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -44,10 +44,6 @@ msgstr "افزودن"
 msgid "Add here after completing any evaluation"
 msgstr "هر ارزیابی که تکمیل شد رو به اینجا اضافه کن"
 
-#: src/pages/projects-page/AddProjectForm.tsx:12
-msgid "Projects"
-msgstr "فعالیت‌ها"
-
 #: src/pages/manager-review-dashboard/TableFilters.tsx:29
 #: src/pages/manager-review-dashboard/TableFilters.tsx:42
 msgid "All"
@@ -103,7 +99,7 @@ msgstr "نام همکار"
 
 #: src/pages/projects-page/ProjectForm.tsx:73
 msgid "Coordinate reviewers with your manager (maximum 6 reviewers)"
-msgstr "مرورکنندگانی رو که اینجا مشخص می‌کنی، فقط قسمت «توضیح فعالیت» رو در فاز بعدی مرور عملکرد می‌خونن و روش بهت بازخورد می‌دن. همچنین این افراد «شایستگی‌های رفتاری» و «ویژگی‌های بارز» تو رو از نگاه خودشون (و بدون خوندن نوشته‌هات) ارزیابی می‌کنن. مرورکنندگان رو حتما با هماهنگی مدیر مستقیمت انتخاب کن (حداکثر ۶ نفر)."
+msgstr "**مرورکنندگانی رو که اینجا مشخص می‌کنی، فقط قسمت «توضیح فعالیت» رو در فاز بعدی مرور عملکرد می‌خونن و روش بهت بازخورد می‌دن. همچنین این افراد «شایستگی‌های رفتاری» و «ویژگی‌های بارز» تو رو از نگاه خودشون (و بدون خوندن نوشته‌هات) ارزیابی می‌کنن. مرورکنندگان رو حتما با هماهنگی مدیر مستقیمت انتخاب کن (حداکثر ۶ نفر)."
 
 #: src/shared/full-page-error/FullPageError.stories.tsx:9
 msgid "Criteria"
@@ -373,6 +369,7 @@ msgstr "عنوان فعالیت تکراری است."
 msgid "Project title"
 msgstr "عنوان فعالیت"
 
+#: src/pages/projects-page/AddProjectForm.tsx:12
 #: src/shared/full-page-error/FullPageError.stories.tsx:21
 msgid "Projects"
 msgstr "فعالیت‌ها"
@@ -566,7 +563,7 @@ msgstr "چی رو بهبود بدم"
 
 #: src/pages/projects-page/ProjectForm.tsx:67
 msgid "Work results and achievemnts reflecting your contributions; For instance, your key-results"
-msgstr "ماهیت فعالیت و خروجی مستقیمش رو بیشتر توضیح بده. همچنین چنتا از چالش‌های اصلی‌ای رو که در مسیر انجام فعالیت بهشون برخورد کردی تعریف و عملکردت رو برای حل اونا تحلیل کن."
+msgstr "**ماهیت فعالیت و خروجی مستقیمش رو بیشتر توضیح بده. همچنین چنتا از چالش‌های اصلی‌ای رو که در مسیر انجام فعالیت بهشون برخورد کردی تعریف و عملکردت رو برای حل اونا تحلیل کن."
 
 #: src/shared/confirm-button/ConfirmButton.tsx:8
 msgid "Yes"
