--- a/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
@@ -1,5 +1,3 @@
-همهٔ ما شایستگی‌ها، نگرش‌ها و توانایی‌هایی داریم که می‌دونیم از نقاط قوت رفتاریمون هستند و در نظر داریم که ادامه‌شون بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اون‌ها متمرکز شیم.
+همهٔ ما ویژگی‌ها و رفتارهایی داریم که از نقاط قوت رفتاریمون می‌دونیمشون و می‌خوایم ادامه‌شون بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اونا متمرکز شیم.
 
-توی این بخش حداکثر ۳ تا از مهم‌ترین ویژگی‌ها یا رفتارها رو برای هر دو بخش ذکر کنید.
-
-اطلاعاتی که در این بخش وارد می‌کنید _فقط_ توسط مدیر مستقیم شما قابل مشاهده خواهد بود.
+توی این بخش **حداکثر ۳ تا** از این ویژگی‌ها یا رفتارها رو برای هر دو بخش ذکر کن.
