--- a/src/shared/behavioral-competency-help-text/help-texts/self-review/LeadershipContent.mdx
+++ b/src/shared/behavioral-competency-help-text/help-texts/self-review/LeadershipContent.mdx
@@ -1,1 +1,1 @@
-چقدر نسبت به مسائل محصول و تیم و سازمان حساسیت نشون میدین، به صورت فعالانه مسئولیت راهبری حل اون‌ها رو برعهده می‌‌گیرید و در نهایت نتایجش رو می‌پذیرید؟
+چقدر نسبت به مسائل محصول و تیم و سازمان حساسیت نشون میدی، به صورت فعالانه مسئولیت راهبری حل اون‌ها رو برعهده می‌‌گیری و در نهایت نتایجش رو می‌پذیری؟
