--- a/src/shared/behavioral-competency-help-text/help-texts/self-review/ThoughtLeadershipContent.mdx
+++ b/src/shared/behavioral-competency-help-text/help-texts/self-review/ThoughtLeadershipContent.mdx
@@ -1,1 +1,1 @@
-در حال حاضر، دیگران چقدر در حوزهٔ مربوط به خودتون و برای به دست‌آوردن دانش به‌روز، به شما به عنوان یک متخصص رجوع می‌کنند؟
+در حال حاضر، دیگران چقدر در حوزه‌ی مربوط به تو و برای به دست‌آوردن دانش به‌روز، بهت به عنوان یک متخصص رجوع می‌کنن؟
