--- a/src/shared/behavioral-competency-help-text/help-texts/peer-review/OrganizationCultureAdoptionContent.mdx
+++ b/src/shared/behavioral-competency-help-text/help-texts/peer-review/OrganizationCultureAdoptionContent.mdx
@@ -1,1 +1,1 @@
-چقدر با فرهنگ سازمان همراه هست؟ (مثل اشتیاق به تغییر، صداقت، صراحت و احترام، ارتباطات بی‌واسطه، نگاه‌بلند مدت، یادگرفتن از شکست‌ها، تعهد به رفتار حرفه‌ای)
+چقدر با فرهنگ سازمان همراهه؟ (مثل اشتیاق به تغییر، صداقت، صراحت و احترام، ارتباطات بی‌واسطه، نگاه‌بلند مدت، یادگرفتن از شکست‌ها، تعهد به رفتار حرفه‌ای)
