--- a/src/shared/behavioral-competency-help-text/help-texts/self-review/ProblemSolvingContent.mdx
+++ b/src/shared/behavioral-competency-help-text/help-texts/self-review/ProblemSolvingContent.mdx
@@ -1,1 +1,1 @@
-مهارت حل مسئلهٔ خودتون رو چگونه ارزیابی می‌کنید؟ (مثل تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین، ارائه راه‌حل قابل اجرا و تصمیم‌گیری)
+مهارت حل مسئله‌ات رو چگونه ارزیابی می‌کنی؟ (مثل تحقیق و تعریف درست مسئله، تفکر خلاق، بررسی راه‌حل‌های جایگزین، ارائه راه‌حل قابل اجرا و تصمیم‌گیری)
