--- a/src/pages/peer-review-page/projectsTab/Guide.mdx
+++ b/src/pages/peer-review-page/projectsTab/Guide.mdx
@@ -2,4 +2,4 @@ import { Username } from 'src/pages/behavioral-competencies-page/Username';
 import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsername';
 
 برای هر پروژه، ابتدا دستاوردهایی که **<Username/>** نوشته رو بخون و بعد، ارزیابی خودت به همراه مشاهده‌ها و بازخوردهات رو براش بنویس.
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername />** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای **<ShortUsername />** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
