--- a/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentPeerReview.mdx
@@ -3,4 +3,4 @@ import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsern
 
 به نظرت **<Username/>** کدوم ویژگی‌ها و رفتارهاش رو باید ادامه بده و در آیندهٔ نزدیک روی بهبود کدوم‌ها تمرکز کنه؟ برای هر بخش حداکثر ۳ مورد از مهم‌ترین موارد رو ذکر کن.
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای **<ShortUsername/>** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای **<ShortUsername/>** به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
