--- a/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
+++ b/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
@@ -3,4 +3,4 @@ import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsern
 
 **<Username/>** رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ ارزیابی عملکرد، برای <ShortUsername/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای <ShortUsername/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
