Refactor texts a bit

--- a/src/locales/en/messages.po
+++ b/src/locales/en/messages.po
@@ -28,8 +28,8 @@ msgstr "Work results and achievemnts reflecting your contributions; For instance
 #: src/pages/projects-page/ProjectForm.tsx:67
 #: src/shared/project-output/ProjectCommentOutput.tsx:27
 #: src/shared/project-output/ProjectOutput.tsx:32
-msgid "Accomplishments"
-msgstr "Accomplishments"
+msgid "Accomplishments Description"
+msgstr "Accomplishments Description"
 
 #: src/containers/main/getMenuItems.ts:22
 #: src/pages/dashboard-page/DashboardPage.tsx:35
@@ -100,8 +100,8 @@ msgid "Changes you made may not be saved."
 msgstr "Changes you made may not be saved."
 
 #: src/pages/projects-page/AddProjectForm.tsx:15
-msgid "Choose projects you have been working on in the past year."
-msgstr "Choose projects you have been working on in the past year."
+msgid "Choose projects you have been working on in the past year (At most 5)."
+msgstr "Choose projects you have been working on in the past year (At most 5)."
 
 #: src/pages/manager-review-dashboard/TableFilters.tsx:14
 msgid "Colleague name"
@@ -591,12 +591,12 @@ msgid "Yes! Go"
 msgstr "Yes! Go"
 
 #: src/pages/manager-review-page/ManagerReviewProgress.tsx:39
-msgid "You have evaluated all {total} achievements. You can change them when you want to."
-msgstr "You have evaluated all {total} achievements. You can change them when you want to."
+msgid "You have evaluated all {total} achievements. You can change them whenever you want to."
+msgstr "You have evaluated all {total} achievements. You can change them whenever you want to."
 
 #: src/pages/manager-review-page/ManagerReviewProgress.tsx:34
-msgid "You have evaluated all {total} behavioral competencies. You can change them when you want to."
-msgstr "You have evaluated all {total} behavioral competencies. You can change them when you want to."
+msgid "You have evaluated all {total} behavioral competencies. You can change them whenever you want to."
+msgstr "You have evaluated all {total} behavioral competencies. You can change them whenever you want to."
 
 #: src/pages/dashboard-page/AchievementsNoProjects.tsx:6
 msgid "You haven't added any project."
