--- a/src/locales/fa/messages.po
+++ b/src/locales/fa/messages.po
@@ -182,6 +182,10 @@ msgstr "وضعیت ارزیابی"
 msgid "Evidence"
 msgstr "دلیل ارزیابی‌ات"
 
+#: src/pages/peer-review-page/projectsTab/projects-form/PeerReviewProjectsForm.tsx:41
+msgid "Evidence and Feedback"
+msgstr "شواهد و بازخورد"
+
 #: src/global-types/Evaluation.ts:18
 msgid "Exceeds Expectations from Him/Her"
 msgstr "فراتر از انتظاری که ازش میره"
@@ -189,10 +193,6 @@ msgstr "فراتر از انتظاری که ازش میره"
 #: src/global-types/Evaluation.ts:12
 msgid "Exceeds Expectations from me"
 msgstr "فراتر از انتظاری که از من میره"
-
-#: src/pages/peer-review-page/projectsTab/projects-form/PeerReviewProjectsForm.tsx:41
-msgid "Feedback"
-msgstr "بازخورد"
 
 #: src/pages/dashboard-page/AchievementsNoProjects.tsx:8
 msgid "Go to Achievements page and add projects you have participated in"
