--- a/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
+++ b/src/pages/behavioral-competencies-page/help-texts/peer-review/DescriptionContent.mdx
@@ -1,6 +1,17 @@
 import { Username } from 'src/pages/behavioral-competencies-page/Username';
 import { ShortUsername } from 'src/pages/behavioral-competencies-page/ShortUsername';
 
-**<Username/>** رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
+**چی بنویسم؟**
 
-مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای <ShortUsername/> به شکل بی‌نام و برای مدیر مستقیمش با نام مرورکننده قابل مشاهده است.
+*<Username/>*
+رو در این ۶ شایستگی ارزیابی کن و شواهدی که مؤید این ارزیابیه رو طوری بنویس که براش واضح، قابل فهم و مفید باشه.
+
+- اگر ارزیابی‌ت بالاتر یا پایین‌تر از حد انتظاره، **انتظار خودت رو توصیف کن** تا مشخص بشه چرا اینطور ارزیابی کردی.
+
+---
+
+**کی چی می‌بینه؟**
+
+مواردی که اینجا می‌نویسی در ایستگاه آخر این دورهٔ مرور عملکرد، برای
+*<ShortUsername/>*
+به شکل بی‌نام و برای مدیرش با نام مرورکننده قابل مشاهده خواهد بود.
