--- a/src/pages/projects-page/DescriptionContent.mdx
+++ b/src/pages/projects-page/DescriptionContent.mdx
@@ -1,1 +1,6 @@
-در این بخش تمرکز روی **فعالیت‌ها**ست و باید همه کارهایی که انجام دادی رو به حداکثر ۵ فعالیت کلی بشکنی. در انجام این کار می‌تونی از مدیر مستقیمت کمک بگیری. در نهایت می‌شه فعالیتی رو با عنوان «کارهای متفرقه» تعریف کنی و کارهایی رو که در هیچ فعالیتی نمی‌گنجن اونجا توضیح بدی.
+در این قسمت باید **با مشورت با مدیر خودت**، عمدهٔ فعالیت‌هایی که از دورهٔ قبلی مرور عملکرد تا الان داشتی رو مشخص و عملکرد خودت رو در اون‌ها مرور کنی.
+این فعالیت‌ها باید **حداکثر ۵ تا** و **در درشت‌دانگی مناسب** باشند (نه خیلی جزئی که درس‌آموختهٔ خاصی نداشته باشه، نه خیلی کلی که نشه روش بازخوردهای عینی و قابل اجرا گرفت).
+
+از اونجایی که مدیرت در فاز ارزیابی مدیران بازخوردهای خودش رو بهت خواهد داد، **در این قسمت لازم نیست مدیرت رو به عنوان مرورکننده انتخاب کنی**.
+
+برای فهمیدن اینکه هر کدوم از مواردی که نوشتی رو چه کسی می‌خونه، به **توضیحات زیر هر سوال** رجوع کن.
