--- a/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
+++ b/src/pages/strengths-weaknesses-page/DescriptionContentSelfReview.mdx
@@ -1,3 +1,3 @@
 همهٔ ما ویژگی‌ها و رفتارهایی داریم که از نقاط قوت رفتاریمون می‌دونیمشون و می‌خوایم ادامه‌شون بدیم و تقویتشون کنیم. از طرف دیگه، رفتارهایی هم داریم که می‌دونیم جای کار دارن و دوست داریم در آیندهٔ نزدیک روی بهبود اونا متمرکز شیم.
 
-توی این بخش **حداکثر ۳ تا** از این ویژگی‌ها یا رفتارها رو برای هر دو بخش ذکر کن.
+توی این بخش **حداکثر ۳ تا** از این ویژگی‌ها یا رفتارها رو **با ذکر شواهد و مصادیق** برای هر دو بخش ذکر کن. *این قسمت رو فقط مدیر مستقیمت می‌خونه*.
